# agentic-chat-test

api/: main.py  pyproject.toml
api/memory/: README.md
api/routers/: chat.py
api/schemas/: profile.py  sorting.py
api/services/: agent.py
api/services/agentic/: __init__.py  agents.py  config.py  pipeline.py  service.py  session.py  tools.py  utils.py
api/services/features/sorting_input/: __init__.py  agents.py  config.py  extractors.py  outputs.py  pipeline.py  prompts.py  service.py  session.py  tools.py  utils.py
api/services/features/user_profile/: __init__.py  agents.py  extractors.py  outputs.py  pipeline.py  prompts.py  service.py  tools.py  utils.py
api/tests/: conftest.py  test_agent.py
client/: README.md  angular.json  package-lock.json  package.json
client/src/: styles.css
client/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
client/src/app/features/sorting-input/: models.ts  sorting-input-form.html  sorting-input-form.ts  types.ts
client/src/app/features/user-profile/: models.ts  types.ts  user-profile-form.ts
client/src/app/layout/mainform/: mainform.html  mainform.ts
client/src/app/shared/copilot-sidebar/: copilot-sidebar.css  copilot-sidebar.html  copilot-sidebar.ts
client/src/app/shared/models/: chat.ts  profile.ts
client/src/app/shared/services/: agent-api.service.ts
client/src/environments/: environment.ts
client/ssl/: localhost-key.pem  localhost.pem
gradio_app/: README.md  app.py  main.py  pyproject.toml  requirements.txt
