[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.0.0",
    "fastapi>=0.128.8",
    "openai-agents>=0.8.4",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]
